tests/rosetta/transpiler/Kotlin/almost-prime.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/almost-prime.kt:33:79: error: expecting ','
        println((k.toString() + " ") + gen(k, 10) as MutableList<Int>.toString())
                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/almost-prime.kt:33:80: error: expecting an expression
        println((k.toString() + " ") + gen(k, 10) as MutableList<Int>.toString())
                                                                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/almost-prime.kt:33:9: error: none of the following functions can be called with the arguments supplied: 
@InlineOnly public inline fun println(): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Any?): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Boolean): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Byte): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Char): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: CharArray): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Double): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Float): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Int): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Long): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Short): Unit defined in kotlin.io
        println((k.toString() + " ") + gen(k, 10) as MutableList<Int>.toString())
        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/almost-prime.kt:33:71: error: unresolved reference: toString
        println((k.toString() + " ") + gen(k, 10) as MutableList<Int>.toString())
                                                                      ^
